# space_invaders

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/app/: app.cpp  app.h
src/collision_detection/: collision_detection.cpp  collision_detection.h
src/config/: config.cpp
src/enemy/: enemy.cpp  enemy.h
src/game/: game.cpp  game.h
src/game_object/: game_object.cpp  game_object.h
src/input/: input.cpp  input.h
src/managers/: buffer_manager.cpp  buffer_manager.h  glew_manager.cpp  glew_manager.h  glfw_manager.cpp  glfw_manager.h  shader_manager.cpp  shader_manager.h
src/player/: player.cpp  player.h
src/render/: renderable_object.h  renderer.cpp  renderer.h
src/shaders/: shader.vert.glsl
tests/: collision_detection_test.cpp
